k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ciderscope-service
  labels:
    app: ciderscope
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: ciderscope
